starting with translation en

--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -1,63 +1,63 @@
 {
   "---": "---",
   "1/2": "1/2",
-  "1-kategorie": "1 Kat.",
-  "2-kategorie": "2 Kat.",
-  "2-attacke": "2. Attacke",
-  "CH": "CH",
-  "FF": "FF",
-  "GE": "GE",
-  "IN": "IN",
-  "KK": "KK",
-  "KL": "KL",
-  "KO": "KO",
-  "MU": "MU",
-  "add_modifikator": "Modifikator hinzufuegen",
+  "1-kategorie": "1 Cat.",
+  "2-kategorie": "2 Cat.",
+  "2-attacke": "2nd Attack",
+  "CH": "CHA",
+  "FF": "DEX",
+  "GE": "AGI",
+  "IN": "INT",
+  "KK": "STR",
+  "KL": "SGC",
+  "KO": "CON",
+  "MU": "COU",
+  "add_modifikator": "Add Modifier",
   "ae": "AE",
-  "aktstatus": "akt. Status",
-  "aktuell": "Aktuell",
-  "aktuelle-werte": "aktuelle Werte:",
-  "allgemein": "Allgemein",
-  "alter": "Alter",
-  "anmerkung": "Anmerkung",
-  "ap-ausgegeben": "AP ausgegeben",
-  "ap-gesamt": "AP gesamt",
-  "ap-verfuegbar": "AP verfügbar",
-  "armbrueste": "Armbrüste",
-  "armbrust": "Armbrust",
-  "astralenergie": "Astralenergie",
-  "at-fk": "AT/FK",
+  "aktstatus": "Current Condition",
+  "aktuell": "Current",
+  "aktuelle-werte": "Current Values:",
+  "allgemein": "General",
+  "alter": "Age",
+  "anmerkung": "Note",
+  "ap-ausgegeben": "AP spent",
+  "ap-gesamt": "Total AP",
+  "ap-verfuegbar": "AP Collected",
+  "armbrueste": "Crossbows",
+  "armbrust": "Crossbow",
+  "astralenergie": "Arcane Energy",
+  "at-fk": "AT/RC",
   "at-mod": "AT-Mod",
   "at-pa": "AT / PA",
-  "attacke": "Attacke",
-  "augenfarbe": "Augenfarbe",
-  "ausgabe": "Ausgabe ",
-  "ausruestung": "Ausrüstung",
-  "ausweichen": "Ausweichen",
-  "auswirkung": "Auswirkung",
-  "aw-vw": "AW/VW",
-  "basis": "Basis",
-  "be": "BE",
-  "be-aktiviert": "BE aktiviert",
-  "be-gesamt": "BE gesamt",
-  "beidhaendigerkampf": "Beidhändig",
-  "belastung": "Belastung",
-  "beschreibung": "Beschreibung",
-  "betaeubung": "Betäubung",
-  "bewegungsunfaehig": "Bewegungsunfähig",
-  "bewusstlos": "Bewusstlos",
-  "blasrohre": "Blasrohre",
+  "attacke": "Attack",
+  "augenfarbe": "Eye Color",
+  "ausgabe": "Output ",
+  "ausruestung": "Equipment",
+  "ausweichen": "Dodge",
+  "auswirkung": "Effect",
+  "aw-vw": "DOG/DEF",
+  "basis": "Stat",
+  "be": "ENC",
+  "be-aktiviert": "ENC activated",
+  "be-gesamt": "Total ENC",
+  "beidhaendigerkampf": "Two-Weapon Combat",
+  "belastung": "Encumbrance",
+  "beschreibung": "Description",
+  "betaeubung": "Stupor",
+  "bewegungsunfaehig": "Immobilized",
+  "bewusstlos": "Unconscious",
+  "blasrohre": "Blowtube",
   "blind": "Blind",
-  "blutrausch": "Blutrausch",
-  "bogen": "Bogen",
-  "boegen": "Bögen",
+  "blutrausch": "Bloodlust",
+  "bogen": "Bow",
+  "boegen": "Bows",
   "bonus": "Bonus",
   "bonus-malus": "Bonus/Malus",
-  "brennend": "Brennend",
+  "brennend": "Burning",
   "brillant": "Brillant (1700 AP)",
   "charakteristika": "Charakteristika",
   "charisma": "Charisma",
-  "d6": "W6+",
+  "d6": "D6+",
   "dauer": "Dauer",
   "diskus": "Diskus",
   "diskusse": "Diskusse",
