--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -55,95 +55,95 @@
   "bonus-malus": "Bonus/Malus",
   "brennend": "Burning",
   "brillant": "Brillant (1700 AP)",
-  "charakteristika": "Charakteristika",
+  "charakteristika": "Characteristics",
   "charisma": "Charisma",
   "d6": "D6+",
-  "dauer": "Dauer",
-  "diskus": "Diskus",
-  "diskusse": "Diskusse",
-  "distanz": "Distanz",
-  "dolche": "Dolche",
-  "durchschnittlich": "Durchschnittlich (1000 AP)",
-  "effekt-modat": "Effekt-Mod. AT",
-  "effekt-modaw": "Effekt-Mod. AW",
-  "effekt-modpa": "Effekt-Mod. PA",
-  "effekt-modtp": "Effekt-Mod. TP",
-  "elfenlieder": "Elfenlieder",
-  "eigenschaften": "Eigenschaften",
-  "eigenschaft": "Eigenschaft",
-  "eingeengt": "Eingeengt",
-  "entrueckung": "Entrückung",
-  "entrueckung-aktiviert": "Entrückung aktiviert",
-  "entrueckung-anzeigen": "Entrückung Bons/Malus anzeigen",
-  "erfahren": "Erfahren (1100 AP)",
-  "erfahrungsgrad": "Erfahrungsgrad",
-  "erregung": "Erregung",
-  "erweiterung1": "1. Erweiterung",
-  "erweiterung2": "2. Erweiterung",
-  "erweiterung3": "3. Erweiterung",
-  "familie": "Familie",
-  "fechtwaffen": "Fechtwaffen",
-  "fern": "fern",
-  "fernkampf": "Fernkampf",
-  "fernkampfwaffe": "Fernkampfwaffe",
-  "fernkampfwaffen": "Fernkampfwaffen",
-  "feuerspeien": "Feuerspeien",
-  "fingerfertigkeit": "Fingerfertigkeit",
-  "fixiert": "Fixiert",
-  "flueche": "Flüche",
-  "furcht": "Furcht",
-  "fw": "FW",
-  "fk-mod": "FK-Mod",
-  "geburtsort": "Geburtsort",
-  "geburtstag": "Tsatag",
-  "gegner-von-hinten": "Gegner von Hinten",
-  "gegnerische-kt": "Gegnerische KT",
-  "gehend": "gehend",
-  "gesamt": "Gesamt",
-  "gesamtmodifikator": "Summe",
-  "gesamtstatus-ab": "Gesamt: ab -8 handlungsunfähig",
-  "gesamtwert": "Gesamtwert",
-  "geschlecht": "Geschlecht",
-  "geschwindigkeit": "Geschwindigkeit",
-  "gesellschaftstalente": "Gesellschaftstalente",
-  "gewandheit": "Gewandheit",
-  "gewicht": "Gewicht",
-  "glaube": "Glaube",
+  "dauer": "Duration",
+  "diskus": "Disk",
+  "diskusse": "Disks",
+  "distanz": "Range",
+  "dolche": "Dagger",
+  "durchschnittlich": "Ordinary (1000 AP)",
+  "effekt-modat": "Effect-Mod. AT",
+  "effekt-modaw": "Effect-Mod. DO",
+  "effekt-modpa": "Effect-Mod. PA",
+  "effekt-modtp": "Effect-Mod. dP",
+  "elfenlieder": "Elven Magical Songs",
+  "eigenschaften": "Attributes",
+  "eigenschaft": "Attribut",
+  "eingeengt": "Cramped",
+  "entrueckung": "Rapture",
+  "entrueckung-aktiviert": "Rapture activated",
+  "entrueckung-anzeigen": "ahow Rapture Bonus/Malus",
+  "erfahren": "Experienced (1100 AP)",
+  "erfahrungsgrad": "Experience Level",
+  "erregung": "Arousal",
+  "erweiterung1": "1. Extension",
+  "erweiterung2": "2. Extension",
+  "erweiterung3": "3. Extension",
+  "familie": "Family",
+  "fechtwaffen": "Fencing Weapons",
+  "fern": "range",
+  "fernkampf": "Ranged Combat",
+  "fernkampfwaffe": "Ranged Combat Weapon",
+  "fernkampfwaffen": "Ranged Combat Weapons",
+  "feuerspeien": "Fire Breath",
+  "fingerfertigkeit": "Dexterity",
+  "fixiert": "Bound",
+  "flueche": "Curses",
+  "furcht": "Fear",
+  "fw": "SP",
+  "fk-mod": "RC-Mod",
+  "geburtsort": "Place of Birth",
+  "geburtstag": "Tsa Day",
+  "gegner-von-hinten": "Attack from Behind",
+  "gegnerische-kt": "Opponents CT",
+  "gehend": "Walking",
+  "gesamt": "Total",
+  "gesamtmodifikator": "Sum",
+  "gesamtstatus-ab": "Total: =< -8 Incapacitated",
+  "gesamtwert": "Total Value",
+  "geschlecht": "Sex",
+  "geschwindigkeit": "Movement",
+  "gesellschaftstalente": "Social Skills",
+  "gewandheit": "Agility",
+  "gewicht": "Weight",
+  "glaube": "Faith",
   "gm": "GM ",
-  "gross": "groß",
-  "groesse": "Größe",
+  "gross": "Large",
+  "groesse": "Size",
   "grundwert": "GW",
   "grundwerte": "Grundwerte",
-  "gs": "GS",
-  "haarfarbe": "Haarfarbe",
-  "hakenschlagend": "hakenschlagend",
+  "gs": "MV",
+  "haarfarbe": "Hair color",
+  "hakenschlagend": "Zigzagging",
   "handlungsunfaehig": "Handlungsunfähig",
-  "handwerkstalente": "Handwerkstalente",
-  "hiebwaffen": "Hiebwaffen",
+  "handwerkstalente": "Craft Skills",
+  "hiebwaffen": "Impact Weapons",
   "info": "Info",
   "initiative": "Initiative",
   "intuition": "Intuition",
-  "inventar": "Inventar",
-  "ja": "ja",
-  "kampf": "Kampf",
-  "kampf-im-wasser": "Kampf im Wasser",
-  "kampf-unter-wasser": "Kampf unter Wasser",
-  "kampfsituationen-status": "Kampfsituationen / Status",
-  "kampftechniken": "Kampftechniken",
-  "kampftechnikwert": "Kampftechnikwert",
-  "karmaenergie": "Karmaenergie",
-  "ke": "KE",
-  "kettenw-": "Kettenw.",
-  "kettenwaffen": "Kettenwaffen",
-  "klein": "klein",
-  "klugheit": "Klugheit",
-  "koerperkraft": "Körperkraft",
-  "koerpertalente": "Körpertalente",
-  "kompetent": "Kompetent (1200 AP)",
-  "konstitution": "Konstitution",
-  "kosten": "Kosten",
-  "krank": "Krank",
-  "kultur": "Kultur",
+  "inventar": "Belongings",
+  "ja": "yes",
+  "kampf": "Combat",
+  "kampf-im-wasser": "Combat standing in Water",
+  "kampf-unter-wasser": "Combat under Water",
+  "kampfsituationen-status": "Combat Situation / Status",
+  "kampftechniken": "Combat Technique",
+  "kampftechnikwert": "Combat Technique Value",
+  "karmaenergie": "Karma Points",
+  "ke": "KP",
+  "kettenw-": "Chain Weapon",
+  "kettenwaffen": "Chain Weapons",
+  "klein": "Small",
+  "klugheit": "Sagacity",
+  "koerperkraft": "Strength",
+  "koerpertalente": "Physical Skills",
+  "kompetent": "Competent (1200 AP)",
+  "konstitution": "Constitution",
+  "kosten": "Costs",
+  "krank": "Sick",
+  "kultur": "Culture",
   "kurz": "kurz",
   "kt": "KT",
   "ladezeit": "Ladezeit in KR",
