--- a/SavageWorlds-Tabbed/translations/en.json
+++ b/SavageWorlds-Tabbed/translations/en.json
@@ -55,7 +55,7 @@
     "pace": "Pace",
     "run": "Run",
     "runs": "runs for",
-    "inches": "inches",
+    "inches":"inches",
     "parry": "Parry",
     "sanity": "Sanity",
     "charisma": "Charisma",
@@ -99,7 +99,7 @@
     "spirit": "Spirit",
     "strength": "Strength",
     "vigor": "Vigor",
-    "animal-intelligence": "Animal intelligence",
+	"animal-intelligence":"Animal intelligence",
     "health": "Health",
     "wounds": "Wounds",
     "max-wounds": "Max Wounds",
@@ -119,7 +119,7 @@
     "miscellaneous": "Miscellaneous",
     "unshake-roll-modifier": "Unshake Roll Modifier",
     "trait-test-modifier": "Trait Test Modifier",
-    "modifiers": "modifiers",
+    "modifiers":"modifiers",
     "trait": "Trait",
     "damage": "Damage",
     "damage-modifier": "Damage Modifier",
@@ -287,6 +287,8 @@
     "ships-purse-and-misc": "Ship's purse and misc. tidbits for ports of call, etc.",
     "flying-ship": "Flying Ship",
     "size": "Size",
+    "char-size": "Size{{0}}",
+    "show-size-fields": "Show Size fields",
     "climb": "Climb",
     "energy": "Energy",
     "total-mod-slots": "Total Mod Slots",
@@ -340,7 +342,7 @@
     "party-bag": "Party Bag",
     "advancements-taken": "Advancements Taken",
     "advancement": "Advancement",
-    "advance": "Advance",
+    "advance":"Advance",
     "roll-results": "Roll Results",
     "modifiers-applied": "Modifiers Applied",
     "situational": "Situational",
@@ -693,7 +695,7 @@
     "advancements": "Advancements",
     "shaken": "Shaken",
     "incapacitated-abbr": "Inc",
-    "incapacitated": "Incapacitated",
+    "incapacitated":"Incapacitated",
     "iron-tiks": "Tiks",
     "silver-smerduks": "Smerduks",
     "money": "Money",
@@ -745,13 +747,13 @@
     "total-gear-weight-carried": "Total Gear Weight Carried",
     "powers": "Powers",
     "power": "Power",
-    "ab-section-header": "Section Header: ",
-    "ab-power-column-name": "Column Header: ",
-    "ab-pp": "Power Points Abbreviation: ",
-    "ab-name": "Arcane Background: ",
-    "ab-pp-name": "Power Points Label: ",
-    "ab-color-indicator": "Arcane Background Indicator: ",
-    "invested": "invested",
+	"ab-section-header":"Section Header: ",
+	"ab-power-column-name":"Column Header: ",
+	"ab-pp":"Power Points Abbreviation: ",
+	"ab-name":"Arcane Background: ",
+	"ab-pp-name":"Power Points Label: ",
+	"ab-color-indicator":"Arcane Background Indicator: ",
+	"invested":"invested",
     "power-point-abbr-u": "PP",
     "power-point-abbr-u-invested": "PP Invested",
     "power-points": "Power Points",
@@ -868,8 +870,8 @@
     "unshake-desc5": "can now act",
     "unshake-desc6": "fails",
     "show-unshake-button": "Show Unshake Button",
-    "soak": "Soak",
-    "show-soak-button": "Show Soak Button",
+	"soak":"Soak",
+	"show-soak-button": "Show Soak Button",
     "item": "Item",
     "trappings": "Trappings",
     "plus-the-next": "Plus the next",
@@ -1049,88 +1051,47 @@
     "statblock-output-button": "Statblock Output button",
     "gritty-damage-description": "Check this box to have a Gritty Damage Button show on the Damage roll template output.  This would require you to create an Injury Table rollable table to be referenced by the button.",
     "injury-table-description": "If you're using the Gritty Damage rule, provide the Injury Table Rollable Table name to be used by the button.",
-    "rename-skill-fighting": "Rename : Fighting",
-    "rename-skill-academics": "Rename : Academics",
-    "rename-skill-athletics": "Rename : Athletics",
-    "rename-skill-battle": "Rename : Battle",
-    "rename-skill-boating": "Rename : Boating",
-    "rename-skill-climbing": "Rename : Climbing",
-    "rename-skill-common-knowledge": "Rename : Common Knowledge",
-    "rename-skill-driving": "Rename : Driving",
-    "rename-skill-electronics": "Rename : Electronics",
-    "rename-skill-faith": "Rename : Faith",
-    "rename-skill-focus": "Rename : Focus",
-    "rename-skill-gambling": "Rename : Gambling",
-    "rename-skill-guts": "Rename : Guts",
-    "rename-skill-hacking": "Rename : Hacking",
-    "rename-skill-healing": "Rename : Healing",
-    "rename-skill-intimidation": "Rename : Intimidation",
-    "rename-skill-investigation": "Rename : Investigation",
-    "rename-skill-native-language": "Rename : Native Language",
-    "rename-skill-lockpicking": "Rename : Lockpicking",
-    "rename-skill-notice": "Rename : Notice",
-    "rename-skill-occult": "Rename : Occult",
-    "rename-skill-performance": "Rename : Performance",
-    "rename-skill-persuasion": "Rename : Persuasion",
-    "rename-skill-piloting": "Rename : Piloting",
-    "rename-skill-psionics": "Rename : Psionics",
-    "rename-skill-repair": "Rename : Repair",
-    "rename-skill-research": "Rename : Research",
-    "rename-skill-riding": "Rename : Riding",
-    "rename-skill-ritual": "Rename : Ritual",
-    "rename-skill-science": "Rename : Science",
-    "rename-skill-shooting": "Rename : Shooting",
-    "rename-skill-spellcasting": "Rename : Spellcasting",
-    "rename-skill-stealth": "Rename : Stealth",
-    "rename-skill-streetwise": "Rename : Streetwise",
-    "rename-skill-survival": "Rename : Survival",
-    "rename-skill-swimming": "Rename : Swimming",
-    "rename-skill-taunt": "Rename : Taunt",
-    "rename-skill-thievery": "Rename : Thievery",
-    "rename-skill-throwing": "Rename : Throwing",
-    "rename-skill-tracking": "Rename : Tracking",
-    "rename-skill-weird-science": "Rename : Weird Science",
-    "use-skill-academics": "Allow : Academics",
-    "use-skill-athletics": "Allow : Athletics",
-    "use-skill-battle": "Allow : Battle",
-    "use-skill-boating": "Allow : Boating",
-    "use-skill-climbing": "Allow : Climbing",
-    "use-skill-common-knowledge": "Allow : Common Knowledge",
-    "use-skill-driving": "Allow : Driving",
-    "use-skill-electronics": "Allow : Electronics",
-    "use-skill-faith": "Allow : Faith",
-    "use-skill-focus": "Allow : Focus",
-    "use-skill-gambling": "Allow : Gambling",
-    "use-skill-guts": "Allow : Guts",
-    "use-skill-hacking": "Allow : Hacking",
-    "use-skill-healing": "Allow : Healing",
-    "use-skill-intimidation": "Allow : Intimidation",
-    "use-skill-investigation": "Allow : Investigation",
-    "use-skill-native-language": "Allow : Native Language",
-    "use-skill-lockpicking": "Allow : Lockpicking",
-    "use-skill-notice": "Allow : Notice",
-    "use-skill-occult": "Allow : Occult",
-    "use-skill-performance": "Allow : Performance",
-    "use-skill-persuasion": "Allow : Persuasion",
-    "use-skill-piloting": "Allow : Piloting",
-    "use-skill-psionics": "Allow : Psionics",
-    "use-skill-repair": "Allow : Repair",
-    "use-skill-research": "Allow : Research",
-    "use-skill-riding": "Allow : Riding",
-    "use-skill-ritual": "Allow : Ritual",
-    "use-skill-science": "Allow : Science",
-    "use-skill-shooting": "Allow : Shooting",
-    "use-skill-spellcasting": "Allow : Spellcasting",
-    "use-skill-stealth": "Allow : Stealth",
-    "use-skill-streetwise": "Allow : Streetwise",
-    "use-skill-survival": "Allow : Survival",
-    "use-skill-swimming": "Allow : Swimming",
-    "use-skill-taunt": "Allow : Taunt",
-    "use-skill-thievery": "Allow : Thievery",
-    "use-skill-throwing": "Allow : Throwing",
-    "use-skill-tracking": "Allow : Tracking",
-    "use-skill-weird-science": "Allow : Weird Science",
-    "skill-allowed-desc": "Whether this skill is allowed in your setting.",
+	"rename-skill-fighting":"Rename : Fighting",
+	"rename-skill-academics":"Rename : Academics",
+	"rename-skill-athletics":"Rename : Athletics",
+	"rename-skill-battle":"Rename : Battle",
+	"rename-skill-boating":"Rename : Boating",
+	"rename-skill-climbing": "Rename : Climbing",
+	"rename-skill-common-knowledge":"Rename : Common Knowledge",
+	"rename-skill-driving":"Rename : Driving",
+	"rename-skill-electronics":"Rename : Electronics",
+	"rename-skill-faith":"Rename : Faith",
+	"rename-skill-focus":"Rename : Focus",
+	"rename-skill-gambling":"Rename : Gambling",
+	"rename-skill-guts":"Rename : Guts",
+	"rename-skill-hacking":"Rename : Hacking",
+	"rename-skill-healing":"Rename : Healing",
+	"rename-skill-intimidation":"Rename : Intimidation",
+	"rename-skill-investigation":"Rename : Investigation",
+	"rename-skill-native-language":"Rename : Native Language",
+	"rename-skill-lockpicking":"Rename : Lockpicking",
+	"rename-skill-notice":"Rename : Notice",
+	"rename-skill-occult":"Rename : Occult",
+	"rename-skill-performance":"Rename : Performance",
+	"rename-skill-persuasion":"Rename : Persuasion",
+	"rename-skill-piloting":"Rename : Piloting",
+	"rename-skill-psionics":"Rename : Psionics",
+	"rename-skill-repair":"Rename : Repair",
+	"rename-skill-research":"Rename : Research",
+	"rename-skill-riding":"Rename : Riding",
+	"rename-skill-ritual":"Rename : Ritual",
+	"rename-skill-science":"Rename : Science",
+	"rename-skill-shooting":"Rename : Shooting",
+	"rename-skill-spellcasting":"Rename : Spellcasting",
+	"rename-skill-stealth":"Rename : Stealth",
+	"rename-skill-streetwise":"Rename : Streetwise",
+	"rename-skill-survival":"Rename : Survival",
+	"rename-skill-swimming":"Rename : Swimming",
+	"rename-skill-taunt":"Rename : Taunt",
+	"rename-skill-thievery":"Rename : Thievery",
+	"rename-skill-throwing":"Rename : Throwing",
+	"rename-skill-tracking":"Rename : Tracking",
+	"rename-skill-weird-science":"Rename : Weird Science",
     "known-issues": "Known Issues",
     "statblock-doesnt-support": "Statblock Output Button doesn't currently output:",
     "spell-information": "Spell information",
@@ -1151,21 +1112,27 @@
     "added-animal-smarts": "Ability to flag Smarts as \"Animal Intelligence\", which then appears as (A) in character sheet and statblocks.",
     "statblocks-rolling-smarts-spirit-would-fail": "StatBlocks : rolling for Smarts or Spirit from StatBlocks would fail.",
     "fixed-encumbrance-for-strength-over-d12": "Fixed SWADE Encumbrance rules support when Strength is d12+x. Each x will add an additional 20 to the loadlimit.",
-    "spells-now-part-of-statblock": "Spells are now part of the Statblock output",
-    "support-for-multiple-arcane-backgrounds": "Support for multiple Arcane Backgrounds; a character can have up to five (5) different ABs, each with its own power point pool. See the documentation section for more details.",
-    "powerlist-macro-support": "As part of the statblock update to include powers, there are six (6) new fields for macro support. @{charpowers} will output the information how it's used in the statblock. @{ab1powerlist} will output a comma separated values list of powers, for the first Arcane Background, using the ability command button format (e.g. [power name](~powerbutton)). The other five fields are: @{ab2powerlist}, @{ab3powerlist}, @{ab4powerlist}, @{ab5powerlist} (each one corresponding to the relevant Arcane Background).",
-    "maincv-p23-v1": "The sheet now supports multiple arcane backgrounds (up to five).  To configure multiple arcane backgrounds, click the hammer and wrench icon (<span class='sheet-pictos'>x</span>). This will reveal the Powers Configuration window. Here you can modify:",
-    "section-header-description": "The Section Header: this will allow you to change the overall section header to whatever makes sense for your character. If s/he has a single arcane background, perhaps \"Spells\" is sufficient; if there are multiple arcane backgrounds, perhaps \"Powers\" makes more sense. Regardless, changing this, changes the lable in the gray header bar.",
-    "column-header-description": "The Column Header: this changes the header for the column with the power name. Because there is only one column for the header name, this will be used for all arcane background powers, so if there are multiple arcane backgrounds for the charcter, something generic would be more appropriate.",
-    "power-points-abbreviation-description": "The Power Point Header: this changes the abbreviation used for Power Points in the column header section. Like the Column Header setting this is for all powers and is used as a column header. There is a character limit for the abbreviation, just so the column view doesn't get messed up.",
-    "arcane-background-name-description": "Arcane Background: you can now name each of your different Arcane Backgrounds. The default is AB1[-5].",
-    "power-points-label-description": "Power Points Label: this allows you to give the power points a different name for each of a character's arcane backgrounds. This label will be shown beneath the power poins fields for the character's arcane background(s).",
-    "add-delete-arcane-backgrounds-description": "Add (<span class='sheet-pictos'>+</span>) and Delete (<span class='sheet-pictos'>#</span>) buttons have been added to allow you to configure each arcane background differently. The minimum number of arcane backgrounds supported is one (1). If you want no arcane bakgrounds, you should use the Settings tab and hide the Power Sections. The maximum number of arcane backgrounds supported is five (5).",
-    "arcane-background-indicator-description": "Arcane Background Indicator: When there's more than one (1) arcane background, the Arcane Background Indicaor allows you to pick a color to associate with each arcane background. Once an individual power has been tied to an arcane background (defaults to the first arcane background), the power row will use the indicator as a background color, allowing you to quickly identify which arcane background each power goes with.  The power points display will also use the Arcane Background Indicator as the background color as quick reminder of what each color represents.",
-    "fixed-copyright-issue": "Fixed the copyright notification issues.",
+    "spells-now-part-of-statblock":"Spells are now part of the Statblock output",
+    "support-for-multiple-arcane-backgrounds":"Support for multiple Arcane Backgrounds; a character can have up to five (5) different ABs, each with its own power point pool. See the documentation section for more details.",
+    "powerlist-macro-support":"As part of the statblock update to include powers, there are six (6) new fields for macro support. @{charpowers} will output the information how it's used in the statblock. @{ab1powerlist} will output a comma separated values list of powers, for the first Arcane Background, using the ability command button format (e.g. [power name](~powerbutton)). The other five fields are: @{ab2powerlist}, @{ab3powerlist}, @{ab4powerlist}, @{ab5powerlist} (each one corresponding to the relevant Arcane Background).",
+    "maincv-p23-v1":"The sheet now supports multiple arcane backgrounds (up to five).  To configure multiple arcane backgrounds, click the hammer and wrench icon (<span class='sheet-pictos'>x</span>). This will reveal the Powers Configuration window. Here you can modify:",
+    "section-header-description":"The Section Header: this will allow you to change the overall section header to whatever makes sense for your character. If s/he has a single arcane background, perhaps \"Spells\" is sufficient; if there are multiple arcane backgrounds, perhaps \"Powers\" makes more sense. Regardless, changing this, changes the lable in the gray header bar.",
+    "column-header-description":"The Column Header: this changes the header for the column with the power name. Because there is only one column for the header name, this will be used for all arcane background powers, so if there are multiple arcane backgrounds for the charcter, something generic would be more appropriate.",
+    "power-points-abbreviation-description":"The Power Point Header: this changes the abbreviation used for Power Points in the column header section. Like the Column Header setting this is for all powers and is used as a column header. There is a character limit for the abbreviation, just so the column view doesn't get messed up.",
+    "arcane-background-name-description":"Arcane Background: you can now name each of your different Arcane Backgrounds. The default is AB1[-5].",
+    "power-points-label-description":"Power Points Label: this allows you to give the power points a different name for each of a character's arcane backgrounds. This label will be shown beneath the power poins fields for the character's arcane background(s).",
+    "add-delete-arcane-backgrounds-description":"Add (<span class='sheet-pictos'>+</span>) and Delete (<span class='sheet-pictos'>#</span>) buttons have been added to allow you to configure each arcane background differently. The minimum number of arcane backgrounds supported is one (1). If you want no arcane bakgrounds, you should use the Settings tab and hide the Power Sections. The maximum number of arcane backgrounds supported is five (5).",
+    "arcane-background-indicator-description":"Arcane Background Indicator: When there's more than one (1) arcane background, the Arcane Background Indicaor allows you to pick a color to associate with each arcane background. Once an individual power has been tied to an arcane background (defaults to the first arcane background), the power row will use the indicator as a background color, allowing you to quickly identify which arcane background each power goes with.  The power points display will also use the Arcane Background Indicator as the background color as quick reminder of what each color represents.",
+    "fixed-copyright-issue":"Fixed the copyright notification issues.",
     "start-attributes-at-d6-not-d4": "Start Attributes at d6 instead of d4",
     "effect": "Effect",
     "activate-talisman": "Activate Talisman",
+    "whisper-stat-block": "Whisper Stat Block",
+    "consumable": "Consumable",
+    "empty": "Empty",
+    "use-consumables": "Use Consumables",
+    "use-consumables-mod": "Use Consumables Mod",
+    "consumable-roll-text": "rolls for {{0}} consumption and gets a",
     "added-talismans-section": "Added Talismans section (activate in configuration tab)",
     "added-ability-to-start-attributes-at-d6": "Ability to start Attributes at d6 instead of d4",
     "fix-skill-dropdown-in-weapons": "Fix Skill drop down in Weapons Section",
