--- a/AW2E/translations/pt.json
+++ b/AW2E/translations/pt.json
@@ -26,7 +26,7 @@
 	"custom-weapons": "Armas Customizadas",
 	"description": "Descrição",
 	"die": "Morra",
-	"do-something-under-fire": "do something under fire",
+	"do-something-under-fire": "fazer alguma coisa sob pressão",
 	"driver": "Piloto",
 	"emerged-stasis": "You emerged from stasis",
 	"erase-holding-option": "apague uma opção de sua propriedade",
@@ -39,7 +39,7 @@
 	"followers": "Seguidores",
 	"followers-newoption": "escolha uma nova opção para seus seguidores",
 	"fortune": "Fortuna",
-	"frame": "Frame",
+	"frame": "Estrutura",
 	"gang": "Gangue",
 	"gang-new-option": "escolha uma nova opção para sua gangue",
 	"gear-barter": "Equipamento &amp; Escambo",
@@ -84,7 +84,7 @@
 	"get-vehicle-new": "ganhe um novo veículo (você cria os detalhes)",
 	"get-workspace-2options": "ganhe uma oficina (você detalha) ou adicione 2 opções a sua oficina",
 	"gigs": "Trampos",
-	"go-aggro": "go aggro/seize by force",
+	"go-aggro": "partir pra cima/tomar à força",
 	"gunlugger": "Pistoleiro",
 	"hard": "Rígido",
 	"hardholder": "Chefona",
@@ -116,9 +116,9 @@
 	"people-connections": "Pessoas com conexões",
 	"phase1-add-improvements": "Adicione essas melhorias manualmente em suas estatísticas, elas não serão calculadas automaticamente",
 	"power": "Power",
-	"puppet-strings": "Puppet Strings",
+	"puppet-strings": "Fios de manipulação de marionetes",
 	"quarantine": "Quarentena",
-	"read-a-sitch": "read a sitch; read a person",
+	"read-a-sitch": "sacar uma situação; sacar uma pessoa",
 	"regulars": "Regular",
 	"remaining-stasis": "Remaining in Stasis",
 	"resolve-interest-establishment": "resolva o interesse de alguém em seu estabelecimento",
@@ -142,7 +142,7 @@
 	"stasis-facilities": "Stasis Facilities",
 	"stat": "Atributo",
 	"stats": "Atributos",
-	"stock": "Stock",
+	"stock": "Suprimento",
 	"strength": "Força",
 	"studio": "Studio",
 	"succeeds": "Sucesso",
