--- a/Adventures in Middle Earth/translations/fr.json
+++ b/Adventures in Middle Earth/translations/fr.json
@@ -78,7 +78,7 @@
 	"wisdom-save-u": "SAUVEGARDE DE SAGESSE",
 	"corruption-u": "CORRUPTION",
 	"corruption-core": "Corruption",
-	"corruption-save-u": "CORRUPTION SAVE",
+	"corruption-save-u": "SAUVEGARDE DE CORRUPTION",
 	"charisma-u": "CHARISME",
 	"charisma-save-u": "SAUVEGARDE DE CHARISME",
 	"spell-dc-u": "DD DE SORT",
@@ -248,12 +248,12 @@
 	"wisdom": "Sagesse",
 	"wisdom-save": "Sauvegarde de sagesse",
 	"corruption": "Corruption",
-	"corruption-save": "Corruption Save",
+	"corruption-save": "Sauvegarde de Corruption",
 	"charisma": "Charisme",
 	"charisma-save": "Sauvegarde de charisme",
 	"saving-throws-u": "JETS DE SAUVEGARDE",
 	"acrobatics-core": "Acrobaties <span>(Dex)</span>",
-	"animal_handling-core": "Animal Handling <span>(Wis)</span>",
+	"animal_handling-core": "Dressage <span>(Sag)</span>",
 	"lore-core": "Connaissance<span>(Int)</span>",
 	"athletics-core": "Athlétisme <span>(For)</span>",
 	"deception-core": "Supercherie<span>(Cha)</span>",
@@ -267,8 +267,8 @@
 	"performance-core": "Représentation <span>(Cha)</span>",
 	"persuasion-core": "Persuasion <span>(Cha)</span>",
 	"riddle-core": "Énigmes<span>(Int)</span>",
-	"shadowlore-core": "Shadow Lore <span>(Int)</span>",
-	"sleight_of_hand-core": "Sleight of Hand <span>(Dex)</span>",
+	"shadowlore-core": "Connaissance de l'ombre<span>(Int)</span>",
+	"sleight_of_hand-core": "Escamotage <span>(Dex)</span>",
 	"stealth-core": "Discrétion <span>(Dex)</span>",
 	"survival-core": "Survie <span>(Sag)</span>",
 	"traditions-core": "Traditions <span>(Int)</span>",
@@ -376,7 +376,7 @@
 	"death-save-mod:-u": "MODIF. SAUVEGARDE CONTRE LA MORT&nbsp;:",
 	"magic-caster-lvl:-u": "NIV. DE LANCEUR DE SORTS&nbsp;:",
 	"halfling-luck-u": "CHANCE DU HALFELIN",
-	"arcane-warrior-u": "ARCANE FIGHTER",
+	"arcane-warrior-u": "GUERRIER LANCEUR DE SORTS",
 	"arcane-rogue-u": "ROUBLARD LANCEUR DE SORTS",
 	"class-options-u": "OPTIONS DE CLASSE (<input type=\"text\" name=\"attr_class_label\" value=\"@{class}\" disabled=\"true\">)",
 	"2nd-class:-u": "2e CLASSE&nbsp;:",
@@ -432,7 +432,7 @@
 	"auto-dmg-roll-info": "Par défaut, les jets de dégâts des attaques ne sont pas lancés tant que l'attaque n'est pas confirmée. Les dégâts ne sont lancés qu'en cliquant sur le nom de l'attaque dans le gabarit du chat. La méthode par défaut est compatible avec l'option de dé en 3D. Optionnellement, vous pouvez choisir 'Toujours' pour que les jets de critique et de dégâts soient lancés en même temps que le jet pour toucher, affichant tous les résultats au moment du jet pour toucher.",
 	"add-char-to-templates-info": "Les noms des personnages ne sont pas affichés dans le gabarit de jet de dé par défaut, et sont seulement affichés comme d'habitude dans le panneau de chat comme joueur/personnage sélectionné dans 'Speaking as'. Activer cette option ajoute le personnage qui utilise le jet dans le gabarit de l'action, ce qui sera utile pour les joueurs utilisant plusieurs personnages.",
 	"inventory-info": "L'inventaire du personnage utilise par défaut le style compatible avec le Compendium Roll20 5E. Cela inclut la geston des quantités/poids, le suivi de l'encombrement, le tri, le calcul de CA, la génération d'attaques automatiques, et bien plus. L'option 'Simple' apporte un champ texte pour les listes d'objets, à destination des joueurs qui préfèrent avoir un contrôle manuel de la feuille.",
-	"encumbrance-info": "The sheet uses the variant encumbrance rules on page 176 of the PHB. The Off option disables the variant rules and only uses a basic over-limit inventory weight check.",
+	"encumbrance-info": "La feuille utilise la variante de la règle d'encombrement de la page 176 du manuel du joueur. L'option 'Off' désactive cette règle et n'utilise alors qu'une vérification basique de la limite de poids de l'inventaire.",
 	"ammo-tracking-info": "Fournit un suivi automatique des munitions avec le <a src='https://wiki.roll20.net/5th_Edition_OGL_by_Roll20#Utilizing_the_5th_Edition_OGL_Companion_API_Script'>5th Edition OGL by Roll20 Companion API Script</a>.",
 	"dungeons-and-dragons-styling": "STYLE DE FEUILLE D&D",
 	"dungeons-and-dragons-styling-info": "Active le style Donjons et Dragons pour la feuille de personnage et les gabarits de jet de dé. Ce paramètre est automatiquement appliqué à toutes les feuilles de personnage et ne peut être utilisé au cas par cas.",
@@ -454,7 +454,7 @@
 	"cd-bar3-value-desc:-u": "On Default Tokens created by doing a Compendium drop onto the virtual table top, set the Bar 3's value to this attribute.",
 	"cd-bar3-max-desc:-u": "On Default Tokens created by doing a Compendium drop onto the virtual table top, set the Bar 3's max to this attribute.",
 	"cd-bar3-link-desc:-u": "On Default Tokens created by doing a Compendium drop onto the virtual table top, link the Bar 3's value to this attribute. If set this will override all other bar settings.",
-	"npc-name-in-rolls:-u": "NPC NAME IN ROLLS:",
+	"npc-name-in-rolls:-u": "NOM DU PNJ DANS LES JETS&nbsp;:",
 	"show": "Afficher",
 	"hide": "Masquer",
 	"npc-name-in-rolls-desc:-u": "In NPC roll results, show or hide the name of the NPC in the roll result card.",
@@ -485,33 +485,33 @@
 	"add-dex-tiebreaker-u": "ADD DEX TIEBREAKER TO INITIATIVE",
 	"initiative-style:-u": "INITIATIVE STYLE:",
 	"query-attr-u": "QUERY ATTRIBUTE",
-	"custom-skills-u": "CUSTOM SKILLS",
-	"weapon-u": "WEAPON",
-	"armor-u": "ARMOR",
+	"custom-skills-u": "COMPÉTENCES PERSONNALISÉES",
+	"weapon-u": "ARME",
+	"armor-u": "ARMURE",
 	"other-u": "OTHER",
 	"source:-u": "SOURCE:",
 	"source-type:-u": "SOURCE TYPE:",
 	"racial": "Cultural",
-	"cv": "Virtue",
-	"class": "Class",
+	"cv": "Vertu",
+	"class": "Classe",
 	"feat": "Virtue",
-	"other": "Other",
-	"partial": "Partial",
-	"show_all": "Show All",
-	"cr_only": "C&R Only",
-	"spell-icons:-u": "SPELL ICONS:",
-	"custom-pb:-u": "CUSTOM PROFICIENCY BONUS:",
-	"show-global-attack-field-u": "SHOW GLOBAL ATTACK MODIFIER FIELD",
-	"show-global-damage-field-u": "SHOW GLOBAL DAMAGE MODIFIER FIELD",
-	"show-global-save-field-u": "SHOW GLOBAL SAVE MODIFIER FIELD",
-	"show-global-skill-field-u": "SHOW GLOBAL SKILL MODIFIER FIELD",
-	"global-attack-u": "GLOBAL ATTACK MODIFIER",
-	"global-damage-u": "GLOBAL DAMAGE MODIFIER",
-	"global-save-u": "GLOBAL SAVE MODIFIER",
-	"global-skill-u": "GLOBAL SKILL MODIFIER",
-	"global-damage": "Global Damage Modifier",
-	"core-die-roll-info": "Changing the core die will replace the normal 1d20 made with almost all rolls with a randomizer of your choice, such as 2d10 or 3d6.",
-	"pb-type-info": "By default, the character's Proficiency Bonus will be automatically calculated based off of their total level as is the standard method in the PHB. The Proficency Die option supports the alternate method outlined in the DMG where, instead of a flat bonus, a die is rolled instead. The Custom option allows you to replace the PB with anything of your choosing.",
+	"other": "Autre",
+	"partial": "Partielle",
+	"show_all": "Tout afficher",
+	"cr_only": "Seulement C & R",
+	"spell-icons:-u": "ICÔNES DE SORT&nbsp;:",
+	"custom-pb:-u": "BONUS DE MAÎTRISE PERSONNALISÉ&nbsp;:",
+	"show-global-attack-field-u": "AFFICHER LE CHAMP DU MODIFICATEUR GLOBAL À L'ATTAQUE",
+	"show-global-damage-field-u": "AFFICHER LE CHAMP DU MODIFICATEUR GLOBAL AUX DÉGÂTS",
+	"show-global-save-field-u": "AFFICHER LE CHAMP DU MODIFICATEUR GLOBAL AUX SAUVEGARDES",
+	"show-global-skill-field-u": "AFFICHER LE CHAMP DU MODIFICATEUR GLOBAL AUX COMPÉTENCES",
+	"global-attack-u": "MODIFICATEUR GLOBAL À L'ATTAQUE",
+	"global-damage-u": "MODIFICATEUR GLOBAL AUX DÉGÂTS",
+	"global-save-u": "MODIFICATEUR GLOBAL AUX SAUVEGARDES",
+	"global-skill-u": "MODIFICATEUR GLOBAL AUX COMPÉTENCES",
+	"global-damage": "Modificateur global aux dégâts",
+	"core-die-roll-info": "Changer le dé de base remplacera le D20 habituel par la plupart des générateurs de jets de votre choix, comme 2D10 ou 3D6.",
+	"pb-type-info": "Par défaut, le bonus de maîtrise sera automatiquement calculé à partir du total des niveaux, selon la méthode standard du manuel des joueurs. L'option Dé de maîtrise utilise la méthode alternative du manuel du MJ avec laquelle, à la place d'un bonus fixe, un dé est lancé. L'option Personnalisé vous permet de remplacer le bonus par la valeur de votre choix.",
 	"global-save-info": "Creates a custom global save modifier field, underneath the SAVING THROWS section of the character sheet. Anything put there will be applied to any save roll. Perfect for regular but not permanent bonuses like the Bless spell.",
 	"global-skill-info": "Creates a custom global skill modifier field, underneath the SKILLS section of the character sheet. Anything put there will be applied to any save roll. Perfect for regular but not permanent bonuses like the Guidance spell.",
 	"global-attack-info": "Creates a custom global attack modifier field, underneath the ATTACKS AND SPELL CASTING section of the character sheet. Anything put there will be applied to any attack to-hit roll. Perfect for regular but not permanent bonuses to attack like the Bless spell.",
@@ -523,7 +523,7 @@
 	"b-custom-info": "When the Proficiency Bonus type is set to Custom, the character sheet will use this value for the character's Proficiency Bonus.",
 	"footer-wiki-link": "For more information about this character sheet, its functionality, or uses, please check out the Roll20 Wiki for official documentation. https://wiki.roll20.net/5th_Edition_OGL_by_Roll20",
 	"accepting-drop-u": "ACCEPTING DROP FROM COMPENDIUM",
-	"are_you_sure": "Are you sure you want to turn this character into a ",
+	"are_you_sure": "Êtes-vous sûr de vouloir transformer ce personnage en ",
 	"yes": "Oui",
 	"cancel": "Annuler",
 	"choose": "Choisir",
