--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/zu.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/zu.json
@@ -523,5 +523,6 @@
   "schipsf": "crwdns121494:0crwdne121494:0",
   "freier-modifikator": "crwdns121496:0crwdne121496:0",
   "ruestungsschutz": "crwdns121498:0crwdne121498:0",
-  "faktor": "crwdns121500:0crwdne121500:0"
+  "faktor": "crwdns121500:0crwdne121500:0",
+  "disclaimer": "crwdns121612:0crwdne121612:0"
 }
