--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -182,13 +182,13 @@
 	"conjuration": "CONJURATION",
 	"constant": "PERMANENT",
 	"constitution": "constitution",
-	"constitution_modifier": "constitution modifier",
+	"constitution_modifier": "modificateur de constitution",
 	"constitution_modifier_temporary": "Mod. temporaire au modificateur de Constitution",
 	"constitution_notes": "Notes",
 	"constitution_score": "Valeur",
 	"constitution_score_temporary": "Mod. temporaire à la valeur de Constitution",
 	"constitution_settings": "Modifier",
-	"copper_pieces": "copper pieces",
+	"copper_pieces": "pièces de cuivre",
 	"cp": "pc",
 	"crafting": "artisanat",
 	"crafting_ability_input": "Caractéristique",
@@ -207,12 +207,12 @@
 	"critical_failure": "échec critique",
 	"critical_success": "réussite critique",
 	"current": "actuel",
-	"custom": "custom",
+	"custom": "perso.",
 	"d6": "d6",
 	"daily-uses": "utilisation quotidienne",
 	"damage": "dégât",
-	"damage-type": "damage type",
-	"damage_type": "damage type",
+	"damage-type": "type de dégâts",
+	"damage_type": "type de dégâts",
 	"darkvision": "vision dans le noir",
 	"dc": "DD",
 	"dc_base": "Base",
@@ -269,7 +269,7 @@
 	"evocation": "ÉVOCATION",
 	"experience_points_xp": "expérience (xp)",
 	"expert": "expert",
-	"expert_4_level": "expert 4+level",
+	"expert_4_level": "expert 4+niveau",
 	"failure": "échec",
 	"feat_ancestry_settings": "Modifier",
 	"feat_bonus_settings": "Modifier",
@@ -282,7 +282,7 @@
 	"focus_points": "points de Focus",
 	"focus_spell": "Sort focus",
 	"focus_spells": "sorts focus",
-	"fort": "fort",
+	"fort": "vig",
 	"fort-save": "SAUVEGARDE DE VIGUEUR",
 	"fortitude": "vigueur",
 	"fortitude_item": "Objet",
@@ -294,7 +294,7 @@
 	"free_action_reaction": "action libre/réaction",
 	"free_action_settings": "Modifier",
 	"free_actions_and_reactions": "Actions libres et réactions",
-	"freq": "freq",
+	"freq": "fréq",
 	"frequency": "utilisation",
 	"gender_pronouns": "sexe",
 	"general feat": "TALENT GÉNÉRAL",
@@ -303,7 +303,7 @@
 	"general_feat_notes": "Notes",
 	"general_feats": "Talents généraux",
 	"gm_whisper": "Chuchoter au MD",
-	"gold_pieces": "gold pieces",
+	"gold_pieces": "pièces d’or",
 	"gp": "po",
 	"hardness": "Blocage",
 	"heavy": "lourde",
