--- a/Symbaroum/translations/es.json
+++ b/Symbaroum/translations/es.json
@@ -116,7 +116,6 @@
 	"title-burden-action-type": "Tipo de acción de la carga",
 	"title-burden-description": "Descripción de la carga",
 	"title-burden-name": "Nombre de la carga",
-	"title-button-does-nothing": "¿Creías que este boton hacía algo? jaja nope.",
 	"title-character-background": "Explica de donde viene tu personaje y hacia donde quiere ir, sus metas y sus peculiaridades.",
 	"title-character-sheet": "Ficha de personaje",
 	"title-choose-dice-and-roll": "Elige un tipo de dado (a la derecha) y dale a este botón para tirar",
@@ -161,5 +160,16 @@
 	"using": "utilizando",
 	"vigilant": "Atento",
 	"weapon-or-power": "Arma/Poder",
-	"with": "con"
+	"with": "con",
+	"shadow": "Shadow",
+	"pain threshold display": "pain threshold display",
+	"toughness maximum input": "toughness maximum input",
+	"current toughness input": "current toughness input",
+	"corruption threshold": "corruption threshold",
+	"permanent corruption input": "permanent corruption input",
+	"corruption input": "corruption input",
+	"Novice": "Novice",
+	"Adept": "Adept",
+	"Master": "Master",
+	"defense": "Defense"
 }
