--- a/WFRP4CharSheet/translations/pl.json
+++ b/WFRP4CharSheet/translations/pl.json
@@ -207,5 +207,19 @@
 	"Total-XP": "Suma XP",
 	"Spent-XP": "Wydane XP",
 	"Left-XP": "Pozostałe XP",
-	"Advancements-Taken-Calculated-p": "Wzięte Rozwinięcia (Policzone):"
+	"Advancements-Taken-Calculated-p": "Wzięte Rozwinięcia (Policzone):",
+	"main": "Main",
+	"skills-talent": "Skills & Talents",
+	"gear-magic": "Gear & Magic",
+	"information": "Information",
+	"experience": "Experience",
+	"SBx3": "SBx3",
+	"SBx2": "SBx2",
+	"SB": "SB",
+	"TBx3": "TBx3",
+	"TBx2": "TBx2",
+	"TB": "TB",
+	"WPBx3": "WPBx3",
+	"WPBx2": "WPBx2",
+	"WPB": "WPB"
 }
