--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/fr.json
@@ -523,5 +523,6 @@
   "schipsf": "SchiP-Sonderfertigkeit",
   "freier-modifikator": "freier Kampf-Mod.",
   "ruestungsschutz": "Rüstungsschutz (RS)",
-  "faktor": "Faktor"
+  "faktor": "Faktor",
+  "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems."
 }
