--- a/Eclipse Phase V2/translations/fr.json
+++ b/Eclipse Phase V2/translations/fr.json
@@ -160,7 +160,7 @@
 	"r-rep": "R-Rep",
 	"x-rep": "X-Rep",
 	"language": "Langues",
-	"forks": "Forks",
+	"forks": "Branches",
 	"backup": "Sauvegardes",
 	"rez point": "Points d'XP",
 	"rp spent": "XP Dépensé",
