--- a/SavageWorlds-Tabbed/translations/tr.json
+++ b/SavageWorlds-Tabbed/translations/tr.json
@@ -287,6 +287,8 @@
     "ships-purse-and-misc": "Ship's purse and misc. tidbits for ports of call, etc.",
     "flying-ship": "Flying Ship",
     "size": "Size",
+    "char-size": "Size{{0}}",
+    "show-size-fields": "Show Size fields",
     "climb": "Climb",
     "energy": "Energy",
     "total-mod-slots": "Total Mod Slots",
@@ -1166,6 +1168,12 @@
     "start-attributes-at-d6-not-d4": "Start Attributes at d6 instead of d4",
     "effect": "Effect",
     "activate-talisman": "Activate Talisman",
+    "whisper-stat-block": "Whisper Stat Block",
+    "consumable": "Consumable",
+    "empty": "Empty",
+    "use-consumables": "Use Consumables",
+    "use-consumables-mod": "Use Consumables Mod",
+    "consumable-roll-text": "rolls for {{0}} consumption and gets a",
     "added-talismans-section": "Added Talismans section (activate in configuration tab)",
     "added-ability-to-start-attributes-at-d6": "Ability to start Attributes at d6 instead of d4",
     "fix-skill-dropdown-in-weapons": "Fix Skill drop down in Weapons Section",
