--- a/Mythras/translations/de.json
+++ b/Mythras/translations/de.json
@@ -184,7 +184,7 @@
     "reach-u": "Reichweite",
     "enc-u": "BEL",
     "force-u": "Wucht",
-    "range-u": "Wurf-/Schussweite",
+    "range-u": "Schussweite",
     "load-u": "Ladezeit",
     "impale-size-short-u": "DG",
     "display-u": "Display",
