--- a/Symbaroum/translations/es.json
+++ b/Symbaroum/translations/es.json
@@ -49,7 +49,7 @@
 	"experience-abbrv": "Exp",
 	"failure": "Fallo",
 	"flexible": "Flexible",
-	"free": "Libre",
+	"free": "Gratuita",
 	"friends": "Amigos",
 	"friends-name": "Nombre del amigo",
 	"friends-occupation": "Ocupación del amigo",
@@ -88,12 +88,12 @@
 	"select": "Selección",
 	"short": "Corta",
 	"special": "Especial",
-	"strong": "Potente",
+	"strong": "Fuerte",
 	"success": "Éxito",
 	"temporary-abbrv": "Temporal",
 	"temporary-corruption": "Corrupción temp.",
 	"temporary-corruption-abbrv": "Corrupción temp.",
-	"threshold": "Umbral de Corrupción,",
+	"threshold": "Umbral de Corrupción",
 	"title-ability-action-type": "Tipo de acción de la habilidad",
 	"title-ability-check": "Tirada de habilidad",
 	"title-ability-description": "Descripción de la habilidad",
@@ -118,7 +118,7 @@
 	"title-burden-name": "Nombre de la carga",
 	"title-character-background": "Explica de donde viene tu personaje y hacia donde quiere ir, sus metas y sus peculiaridades.",
 	"title-character-sheet": "Ficha de personaje",
-	"title-choose-dice-and-roll": "Elige un tipo de dado (a la derecha) y dale a este botón para tirar",
+	"title-choose-dice-and-roll": "Elige el tipo de dado y dale a este botón para tirar",
 	"title-damage-negated": "Daño evitado por una habilidad",
 	"title-damage-reduction": "Cualquier reducción de daño de habilidades u objetos",
 	"title-defense-armor": "Tirada de defensa para la armadura",
@@ -161,15 +161,15 @@
 	"vigilant": "Atento",
 	"weapon-or-power": "Arma/Poder",
 	"with": "con",
-	"shadow": "Shadow",
+	"shadow": "Sombra",
 	"pain threshold display": "pain threshold display",
 	"toughness maximum input": "toughness maximum input",
 	"current toughness input": "current toughness input",
 	"corruption threshold": "corruption threshold",
 	"permanent corruption input": "permanent corruption input",
 	"corruption input": "corruption input",
-	"Novice": "Novice",
-	"Adept": "Adept",
-	"Master": "Master",
-	"defense": "Defense"
+	"Novice": "Principiante",
+	"Adept": "Adepto",
+	"Master": "Maestro",
+	"defense": "Defensa"
 }
