Update translation fr Pathfinder 2

--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -7,7 +7,7 @@
 	"0": "0",
 	"1": "1",
 	"10": "10",
-	"100ft": "1,100 m.",
+	"100ft": "1 100 m.",
 	"10th-level": "10ème NIVEAU",
 	"120_feet": "60 mètres",
 	"19": "19",
@@ -42,7 +42,7 @@
 	"_-daily-uses": "Usages quotidien",
 	"a-successful-sav": "Une sauvegarde réussie :",
 	"ability": "caractéristiques",
-	"ability_modifier": "modificateur de Caractéristique",
+	"ability_modifier": "Modificateur de Caractéristique",
 	"ability_modifiers": "modificateurs de caractéristique",
 	"ability_scores": "caractéristiques",
 	"abjuration": "ABJURATION",
@@ -61,12 +61,12 @@
 	"acrobatics_temporary": "Mod. temporaire",
 	"action": "action",
 	"action_activity": "action/activité",
-	"action_description": "description de l'action",
-	"action_name": "nom de l'action",
-	"action_source": "source de l'action",
-	"action_traits": "attributs de l'action",
-	"action_trigger": "déclencheur de l'action",
-	"action_type": "type d'action",
+	"action_description": "Description",
+	"action_name": "Nom",
+	"action_source": "Source",
+	"action_traits": "Traits",
+	"action_trigger": "Déclencheur",
+	"action_type": "Type",
 	"actions": "actions",
 	"actions_and_activities": "actions et activités",
 	"age": "âge",
@@ -91,8 +91,8 @@
 	"arcana_rank_select": "Sélectionnez le rang",
 	"arcana_setting": "Modifier",
 	"arcana_temporary": "Mod. temporaire",
-	"arcane power": "POUVOIR ARCANIQUE",
-	"arcane spell": "SORT ARCANIQUE",
+	"arcane power": "ARCANIQUE",
+	"arcane spell": "ARCANIQUE",
 	"arcane": "arcanique",
 	"area": "zone",
 	"armor": "armure",
@@ -123,7 +123,7 @@
 	"attacher": "ATTACHER",
 	"attack": "attaque",
 	"attitude": "attitude",
-	"auto_and_reactive_abilities": "automatic and reactive abilites",
+	"auto_and_reactive_abilities": "Capacités automatiques ou de réaction",
 	"b": "c",
 	"background": "historique",
 	"base": "base",
@@ -202,7 +202,7 @@
 	"crafting_temporary": "Mod. temporaire",
 	"creature": "créature",
 	"crit-effect": "EFFET CRITIQUE",
-	"critical!": "Critique!",
+	"critical!": "Critique !",
 	"critical_damage": "Dégâts critique",
 	"critical_failure": "échec critique",
 	"critical_success": "réussite critique",
@@ -252,8 +252,8 @@
 	"diplomacy_temporary": "Mod. temporaire",
 	"dislikes": "n'aime pas...",
 	"divination": "DIVINATION",
-	"divine power": "POUVOIR DIVIN",
-	"divine spell": "SORT DIVIN",
+	"divine power": "DIVIN",
+	"divine spell": "DIVIN",
 	"divine": "divin",
 	"dmg": "DEG",
 	"domain": "domaine",
@@ -265,10 +265,10 @@
 	"enchantment": "ENCHANTEMENT",
 	"encumbered": "encombré",
 	"enemies": "ennemis",
-	"ethnicity": "origine ethnique",
+	"ethnicity": "ethnie",
 	"evocation": "ÉVOCATION",
 	"experience_points_xp": "expérience (xp)",
-	"expert": "expert",
+	"expert": "Expert",
 	"expert_4_level": "expert 4+niveau",
 	"failure": "échec",
 	"feat_ancestry_settings": "Modifier",
@@ -314,7 +314,7 @@
 	"hit_points_ancestry": "points de vie de l'ascendance",
 	"hit_points_class": "points de vie de classe",
 	"hit_points_current": "Points de Vie actuel",
-	"hit_points_dying": "hit points dying",
+	"hit_points_dying": "PV mourrant",
 	"hit_points_item": "Objet",
 	"hit_points_max": "Points de Vie max",
 	"hit_points_notes": "Notes",
@@ -322,7 +322,7 @@
 	"hit_points_roll": "hit points roll",
 	"hit_points_settings": "Modifier",
 	"hit_points_temporary": "PV temporaire",
-	"hit_points_wounded": "hit points wounded",
+	"hit_points_wounded": "PV Blessé",
 	"hp": "pv",
 	"illusion": "ILLUSION",
 	"immunities": "immunités",
@@ -376,8 +376,8 @@
 	"language_notes": "Notes",
 	"language_settings": "Modifier",
 	"languages": "langues",
-	"legendary": "légende",
-	"legendary_8_level": "légende 8+level",
+	"legendary": "Légende",
+	"legendary_8_level": "légende 8+niveau",
 	"level": "niveau",
 	"light": "légère",
 	"light_armor_rank_select": "Sélectionnez le rang",
@@ -396,14 +396,14 @@
 	"m": "m",
 	"magic_tradition": "tradition magique",
 	"magic_traditions": "traditions magiques",
-	"magical_tradition_arcane": "tradition magique arcanique",
-	"magical_tradition_divine": "tradition magique divine",
-	"magical_tradition_occult": "tradition magique occulte",
-	"magical_tradition_primal": "tradition magique primale",
+	"magical_tradition_arcane": "arcanique",
+	"magical_tradition_divine": "divine",
+	"magical_tradition_occult": "occulte",
+	"magical_tradition_primal": "primale",
 	"martial": "martiales",
 	"martial_weapon_proficiencies_rank": "Rang",
-	"master": "maître",
-	"master_6_level": "maître 6+level",
+	"master": "Maître",
+	"master_6_level": "maître 6+niveau",
 	"max": "PV max",
 	"maximum": "maximum",
 	"maximum_hit_points": "points de vie maximum",
@@ -472,15 +472,15 @@
 	"notes": "notes",
 	"npc": "pnj",
 	"npc_placeholder_immunity": "maladie, émotion, poison",
-	"npc_placeholder_languages": "aquan, common, dwarven",
+	"npc_placeholder_languages": "aquatique, commun, nain",
 	"npc_placeholder_resist": "électricité 3",
-	"npc_placeholder_saves": "+2 to all saves vs. magic",
-	"npc_placeholder_speed": "20 pieds, nage 80 pieds",
-	"npc_placeholder_speed_notes": "nage 80 pieds",
-	"npc_placeholder_traits": "rare, aquatic, humanoid",
+	"npc_placeholder_saves": "+2 aux svg magiques",
+	"npc_placeholder_speed": "10 mètres, nage 40 mètres",
+	"npc_placeholder_speed_notes": "nage 40 mètres",
+	"npc_placeholder_traits": "rare, aquatique, humanoïde",
 	"npc_placeholder_worn_item": "épée courte +1",
-	"occult power": "POUVOIR OCCULTE",
-	"occult spell": "SORT OCCULTE",
+	"occult power": "OCCULTE",
+	"occult spell": "OCCULTE",
 	"occult": "occulte",
 	"occultism": "occultisme",
 	"occultism_ability_input": "Caractéristique",
@@ -493,7 +493,7 @@
 	"occultism_settings": "Modifier",
 	"occultism_temporary": "Mod. temporaire",
 	"offensive": "offensive",
-	"offensive_or_proactive_abilities": "offensive or proactive abilities",
+	"offensive_or_proactive_abilities": "Capacités offensives et actives",
 	"options": "options",
 	"or": "ou",
 	"organizations": "organisations",
@@ -539,8 +539,8 @@
 	"prep": "prép",
 	"prepared": "préparé",
 	"prepared_spell_caster": "Lanceur de sorts préparés",
-	"primal power": "POUVOIR PRIMAL",
-	"primal spell": "SORT PRIMAL",
+	"primal power": "PRIMALE",
+	"primal spell": "PRIMALE",
 	"primal": "primale",
 	"prof": "rang",
 	"proficiencies": "rangs",
@@ -629,8 +629,8 @@
 	"sense_settings": "Modifier",
 	"senses": "sens",
 	"senses_notes": "Notes",
-	"shield": "bouclier",
-	"shield_bonus_to_ac": "Bous de bouclier à la CA",
+	"shield": "bouc.",
+	"shield_bonus_to_ac": "Bonus de bouclier à la CA",
 	"shield_bt": "Seuil de Casse du bouclier.",
 	"shield_hardness": "Nombre de points de dégâts absorbés par le bouclier lorsque vous utilisez la réaction Blocage. ",
 	"shield_hp": "Points de vie actuel du bouclier",
@@ -679,7 +679,7 @@
 	"sp": "pa",
 	"special": "spécial",
 	"speed": "Vitesse",
-	"speed_in_feet": "vitesse en pieds",
+	"speed_in_feet": "vitesse en mètres",
 	"spell tradition": "TRADITION DE SORT",
 	"spell": "sort",
 	"spell_attack_key_ability": "Caractéristique",
@@ -699,7 +699,7 @@
 	"spell_dc_rank": "spell dc rank",
 	"spell_dc_temporary": "Mod. temporaire",
 	"spell_slots_per_day": "emplacement de sorts par jour",
-	"spellcaster": "jeteur de sort",
+	"spellcaster": "Lanceur de sorts",
 	"spells": "sorts",
 	"spontaneous": "spontané",
 	"spontaneous_spell_caster": "Lanceur de sorts spontanés",
@@ -717,12 +717,12 @@
 	"stealth_settings": "Modifier",
 	"stealth_temporary": "Mod. temporaire",
 	"str": "for",
-	"str_half": "str half",
+	"str_half": "1/2 for",
 	"strenght_modifier_temporary": "Mod. temporaire au modificateur de Force",
 	"strenght_notes": "Notes",
 	"strenght_score": "Valeur",
 	"strength": "force",
-	"strength_modifier": "strength modifier",
+	"strength_modifier": "Modificateur de Force",
 	"strength_modifier_display": "Modificateur de Force",
 	"strength_score_temporary": "Mod. temporaire à la valeur de Force",
 	"strength_settings": "Modifier",
@@ -755,7 +755,7 @@
 	"three-action_activity": "activité 3 actions",
 	"token_size": "taille du token",
 	"trained": "Entraîné",
-	"trained_2_level": "Entraîné 2+level",
+	"trained_2_level": "Entraîné 2+niveau",
 	"traits": "traits",
 	"transmutation": "TRANSMUTATION",
 	"trigger": "déclencheur",
@@ -763,8 +763,8 @@
 	"type": "type",
 	"unarmed_rank_select": "Sélectionnez le rang",
 	"unarmored": "sans arm.",
-	"untrained": "non entraîné",
-	"untrained_0": "non entraîné +0",
+	"untrained": "Non-entraîné",
+	"untrained_0": "non-entraîné +0",
 	"usage": "utilisation",
 	"use": "Use",
 	"v": "v",
