adding fields for coins

--- a/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/translations/en.json
@@ -146,7 +146,7 @@
   "kultur": "Culture",
   "kurz": "short",
   "kt": "CT",
-  "ladezeit": "Reloud in CR", 
+  "ladezeit": "Reloud in CR",
   "lang": "long",
   "lanzen": "Lances",
   "le": "LE",
@@ -524,5 +524,12 @@
   "freier-modifikator": "freier Kampf-Mod.",
   "ruestungsschutz": "Rüstungsschutz (RS)",
   "faktor": "Faktor",
-  "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems."
+  "disclaimer": "© 2019 Ulisses Spiele.  DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA, RIESLAND und THE DARK EYE sind eingetragene Marken der Ulisses Spiele GmbH, Waldems.",
+  "dukaten":"ducats",
+  "silbertaler":"silverthalers",
+  "heller":"halers",
+  "kreuzer":"kreutzers",
+  "geldbeutel":"Purse"
+
+
 }
